@@ -1,11 +1,11 @@
 "use strict";
 
 const assert = require('assert');
-const path = require('path');
+const path   = require('path');
 
-const acl_mid = require('./acl_mid');
-const constants = require('./constants');
-const model = require('./model');
+const acl_mid     = require('./acl_mid');
+const constants   = require('./constants');
+const model       = require('./model');
 const sentryUtils = require('./sentry_utils');
 
 module.exports.setup = function( app ) {
@@ -17,7 +17,7 @@ module.exports.setup = function( app ) {
       let targetUser = req.params.username;
       model.createToken(
         targetUser, // token owner
-        user, // application user
+        user,       // application user
         // TODO move this somewhere more helpful; probably constants?
         'Created by admin ' + user + ' via admin interface'
       ).then(function(response) {
@@ -39,7 +39,7 @@ module.exports.setup = function( app ) {
 
       model.revokeToken(
         targetUser, // token owner
-        user, // application user
+        user,       // application user
         token,
         // TODO move this somewhere more helpful; probably constants?
         'Revoked by admin ' + user + ' via admin interface'
