@@ -23,25 +23,42 @@ const ACL_ACTION_POST        = 'post';
  */
 const USER_ID_HEADER = 'x-remote-user';
 
+/**
+ * Operation name inventory. Entry for token creation.
+ * @const
+ * @default
+ * @type {String}
+ * @memberof module:lib/constants
+ */
 const TOKEN_OPERATION_CREATE = 'create';
+
+/**
+ * Operation name inventory. Entry for token revocation.
+ * @const
+ * @default
+ * @type {String}
+ * @memberof module:lib/constants
+ */
 const TOKEN_OPERATION_REVOKE = 'revoke';
 
 /**
- * String describing a token which has been revoked.
+ * Token status inventory. Token is revoked.
  * @const
  * @default
  * @type {String}
  * @memberof module:lib/constants
  */
 const TOKEN_STATUS_REVOKED = 'revoked';
+
 /**
- * String describing a token which is valid.
+ * Token status inventory. Token is valid.
  * @const
  * @default
  * @type {String}
  * @memberof module:lib/constants
  */
 const TOKEN_STATUS_VALID   = 'valid';
+
 /**
  * Number of units which a token should be valid before expiring.
  * @see module:lib/constants.TOKEN_DURATION_UNIT
@@ -51,6 +68,7 @@ const TOKEN_STATUS_VALID   = 'valid';
  * @memberof module:lib/constants
  */
 const TOKEN_DURATION       = 7;
+
 /**
  * Units describing how long a token should be valid before expiring.
  * Should be a unit recognised by moment.
@@ -70,6 +88,7 @@ const TOKEN_DURATION_UNIT  = 'days';
  * @memberof module:lib/constants
  */
 const COLLECTION_TOKENS = 'tokens';
+
 /**
  * Name of mongoDB collection to store users.
  * @const
@@ -87,6 +106,7 @@ module.exports = {
    * @type {String}
    */
   UNEXPECTED_NUM_DOCS: messages.ERRORS.UNEXPECTED_NUM_DOCS,
+
   /**
    * Error message to log when a user is attempting to act upon a token
    * which does not belong to them.
@@ -95,6 +115,7 @@ module.exports = {
    * @type {String}
    */
   USER_NOT_TOKEN_OWNER: messages.ERRORS.USER_NOT_TOKEN_OWNER,
+
   /**
    * Message to insert into database when a user creates a token through
    * the web interface.
@@ -103,6 +124,7 @@ module.exports = {
    * @type {String}
    */
   WEB_TOKEN_CREATION_MSG: messages.WEB_TOKEN.CREATION_MSG,
+  
   /**
    * Message to insert into database when a user revokes their token through
    * the web interface.
