@@ -16,6 +16,11 @@
  * @see {@link https://nodejs.org/docs/latest-v6.x/api/assert.html|assert}
  */
 const assert      = require('assert');
+
+/**
+ * @external crypto
+ * @see {@link https://nodejs.org/docs/latest-v6.x/api/crypto.html|crypto}
+ */
 const randomBytes = require('crypto').randomBytes;
 
 /**
@@ -221,16 +226,16 @@ function _buildToken(token, tokenOwner, user, justification) {
     constants.TOKEN_DURATION, constants.TOKEN_DURATION_UNIT
   );
   return {
-    token: token,
-    status: constants.TOKEN_STATUS_VALID,
+    token:      token,
+    status:     constants.TOKEN_STATUS_VALID,
+    user:       tokenOwner,
+    expiryTime: now.clone().add(validDuration).format(),
     hist: [{
-      operation: constants.TOKEN_OPERATION_CREATE,
+      operation:      constants.TOKEN_OPERATION_CREATE,
       operating_user: user,
-      time: now.format(),
-      reason: justification
-    }],
-    user: tokenOwner,
-    expiryTime: now.clone().add(validDuration).format()
+      time:           now.format(),
+      reason:         justification
+    }]
   };
 }
 
@@ -331,10 +336,10 @@ let revokeToken = (tokenOwner, user, token, justification) => {
         },
         $push: {
           hist: {
-            operation: constants.TOKEN_OPERATION_REVOKE,
+            operation:      constants.TOKEN_OPERATION_REVOKE,
             operating_user: user,
-            time: moment().format(),
-            reason: justification
+            time:           moment().format(),
+            reason:         justification
           }
         }
       };
@@ -376,7 +381,7 @@ let listTokens = (user) => {
  * @param {String[]} groups
  * @param {String} token
  * @return {Promise} Fulfills on completion with authorisation decision.
- *   Decision is an Object of form {ok: <Boolean>}.
+ *   Decision is an Object of strictly the form {ok: <Boolean>}.
  */
 let validateToken = (groups, token) => {
   logger.debug('Validating token ' + token + ' authorises bearer');
